AUTOMAKE_OPTIONS = nostdinc

CFLAGS_ALL_COMMON = $(PTHREAD_CFLAGS)
CXXFLAGS_ALL_COMMON = $(PTHREAD_CFLAGS)

CPPFLAGS_ALL_COMMON = \
	-I$(abs_builddir) \
	-I$(abs_builddir)/../lib  \
	-I$(abs_srcdir) \
	-I$(abs_srcdir)/../lib \
	-I$(includedir)

LDFLAGS_ALL_COMMON = -L$(abs_builddir) -L$(abs_builddir)/../lib -L$(libdir)

CPPFLAGS_BIN_COMMON = $(CPPFLAGS_ALL_COMMON)
CFLAGS_BIN_COMMON = $(CFLAGS_ALL_COMMON)
CXXFLAGS_BIN_COMMON = $(CXXFLAGS_ALL_COMMON)
LDFLAGS_BIN_COMMON = $(LDFLAGS_ALL_COMMON) -no-undefined
LIBADD_BIN_COMMON = $(LIBM) 

bin_PROGRAMS = 


if ENABLE_CXX

bin_PROGRAMS += hawk02 hawk51

hawk02_SOURCES = hawk02.c
hawk02_CPPFLAGS = $(CPPFLAGS_ALL_COMMON)
hawk02_CFLAGS = $(CFLAGS_ALL_COMMON)
hawk02_CXXFLAGS = $(CXXFLAGS_ALL_COMMON)
hawk02_LDFLAGS = $(LDFLAGS_ALL_COMMON)
hawk02_LDADD = -lhawk $(LIBADD_BIN_COMMON) ### $(SOCKET_LIBS) $(PTHREAD_LIBS)
hawk02_DEPENDENCIES = ../lib/libhawk.la

hawk51_SOURCES = hawk51.cpp
hawk51_CPPFLAGS = $(CPPFLAGS_ALL_COMMON)
hawk51_CFLAGS = $(CFLAGS_ALL_COMMON)
hawk51_CXXFLAGS = $(CXXFLAGS_ALL_COMMON)
hawk51_LDFLAGS = $(LDFLAGS_ALL_COMMON)
hawk51_LDADD = -lhawk $(LIBADD_BIN_COMMON) ### $(SOCKET_LIBS) $(PTHREAD_LIBS)
hawk51_DEPENDENCIES = ../lib/libhawk.la

endif
